Parser/parser.output
Terminals which are not used

   TOKEN_ERROR
   TOKEN_TRUE
   TOKEN_FALSE


State 15 conflicts: 1 shift/reduce
State 17 conflicts: 1 shift/reduce
State 18 conflicts: 1 shift/reduce


Grammar

    0 $accept: prog $end

    1 prog: statement

    2 statement: assignment
    3          | decl
    4          | TOKEN_LIB
    5          | TOKEN_TYPE TOKEN_IDENT TOKEN_LPAREN TOKEN_RPAREN
    6          | TOKEN_TYPE TOKEN_IDENT TOKEN_LPAREN TOKEN_RPAREN TOKEN_LCURLY
    7          | TOKEN_TYPE TOKEN_IDENT TOKEN_LPAREN TOKEN_RPAREN TOKEN_LCURLY TOKEN_RCURLY
    8          | TOKEN_RCURLY
    9          | TOKEN_LCURLY
   10          | TOKEN_RETURN TOKEN_IDENT TOKEN_SEMI
   11          | TOKEN_RETURN TOKEN_INT TOKEN_SEMI
   12          | TOKEN_RETURN TOKEN_BOOL TOKEN_SEMI
   13          | TOKEN_RETURN logical_expr TOKEN_SEMI
   14          | TOKEN_IFELSE TOKEN_LPAREN logical_expr TOKEN_RPAREN TOKEN_LCURLY

   15 assignment: TOKEN_IDENT TOKEN_ASSIGN logical_expr TOKEN_SEMI

   16 decl: TOKEN_TYPE TOKEN_IDENT TOKEN_ASSIGN logical_expr TOKEN_SEMI
   17     | TOKEN_TYPE TOKEN_IDENT TOKEN_SEMI

   18 logical_expr: logical_expr TOKEN_AND logical_expr
   19             | logical_expr TOKEN_OR logical_expr
   20             | TOKEN_NOT logical_expr
   21             | rel_expr

   22 rel_expr: expr TOKEN_LT expr
   23         | expr TOKEN_GT expr
   24         | expr TOKEN_LTE expr
   25         | expr TOKEN_GTE expr
   26         | expr TOKEN_EQEQ expr
   27         | expr TOKEN_NEQ expr
   28         | TOKEN_LPAREN expr TOKEN_RPAREN
   29         | expr

   30 expr: expr TOKEN_PLUS term
   31     | expr TOKEN_MINUS term
   32     | term

   33 term: term TOKEN_MUL factor
   34     | term TOKEN_DIV factor
   35     | factor

   36 factor: TOKEN_INT
   37       | TOKEN_CHAR
   38       | TOKEN_IDENT
   39       | TOKEN_BOOL


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN_INT (258) 11 36
TOKEN_CHAR (259) 37
TOKEN_PLUS (260) 30
TOKEN_MINUS (261) 31
TOKEN_MUL (262) 33
TOKEN_DIV (263) 34
TOKEN_BOOL (264) 12 39
TOKEN_TYPE (265) 5 6 7 16 17
TOKEN_IFELSE (266) 14
TOKEN_IDENT (267) 5 6 7 10 15 16 17 38
TOKEN_ASSIGN (268) 15 16
TOKEN_SEMI (269) 10 11 12 13 15 16 17
TOKEN_ERROR (270)
TOKEN_EQEQ (271) 26
TOKEN_NEQ (272) 27
TOKEN_LTE (273) 24
TOKEN_GTE (274) 25
TOKEN_LT (275) 22
TOKEN_GT (276) 23
TOKEN_AND (277) 18
TOKEN_OR (278) 19
TOKEN_NOT (279) 20
TOKEN_TRUE (280)
TOKEN_FALSE (281)
TOKEN_LPAREN (282) 5 6 7 14 28
TOKEN_RPAREN (283) 5 6 7 14 28
TOKEN_LCURLY (284) 6 7 9 14
TOKEN_RCURLY (285) 7 8
TOKEN_RETURN (286) 10 11 12 13
TOKEN_LIB (287) 4


Nonterminals, with rules where they appear

$accept (33)
    on left: 0
prog (34)
    on left: 1, on right: 0
statement (35)
    on left: 2 3 4 5 6 7 8 9 10 11 12 13 14, on right: 1
assignment (36)
    on left: 15, on right: 2
decl (37)
    on left: 16 17, on right: 3
logical_expr (38)
    on left: 18 19 20 21, on right: 13 14 15 16 18 19 20
rel_expr (39)
    on left: 22 23 24 25 26 27 28 29, on right: 21
expr (40)
    on left: 30 31 32, on right: 22 23 24 25 26 27 28 29 30 31
term (41)
    on left: 33 34 35, on right: 30 31 32 33 34
factor (42)
    on left: 36 37 38 39, on right: 33 34 35


state 0

    0 $accept: . prog $end

    TOKEN_TYPE    shift, and go to state 1
    TOKEN_IFELSE  shift, and go to state 2
    TOKEN_IDENT   shift, and go to state 3
    TOKEN_LCURLY  shift, and go to state 4
    TOKEN_RCURLY  shift, and go to state 5
    TOKEN_RETURN  shift, and go to state 6
    TOKEN_LIB     shift, and go to state 7

    prog        go to state 8
    statement   go to state 9
    assignment  go to state 10
    decl        go to state 11


state 1

    5 statement: TOKEN_TYPE . TOKEN_IDENT TOKEN_LPAREN TOKEN_RPAREN
    6          | TOKEN_TYPE . TOKEN_IDENT TOKEN_LPAREN TOKEN_RPAREN TOKEN_LCURLY
    7          | TOKEN_TYPE . TOKEN_IDENT TOKEN_LPAREN TOKEN_RPAREN TOKEN_LCURLY TOKEN_RCURLY
   16 decl: TOKEN_TYPE . TOKEN_IDENT TOKEN_ASSIGN logical_expr TOKEN_SEMI
   17     | TOKEN_TYPE . TOKEN_IDENT TOKEN_SEMI

    TOKEN_IDENT  shift, and go to state 12


state 2

   14 statement: TOKEN_IFELSE . TOKEN_LPAREN logical_expr TOKEN_RPAREN TOKEN_LCURLY

    TOKEN_LPAREN  shift, and go to state 13


state 3

   15 assignment: TOKEN_IDENT . TOKEN_ASSIGN logical_expr TOKEN_SEMI

    TOKEN_ASSIGN  shift, and go to state 14


state 4

    9 statement: TOKEN_LCURLY .

    $default  reduce using rule 9 (statement)


state 5

    8 statement: TOKEN_RCURLY .

    $default  reduce using rule 8 (statement)


state 6

   10 statement: TOKEN_RETURN . TOKEN_IDENT TOKEN_SEMI
   11          | TOKEN_RETURN . TOKEN_INT TOKEN_SEMI
   12          | TOKEN_RETURN . TOKEN_BOOL TOKEN_SEMI
   13          | TOKEN_RETURN . logical_expr TOKEN_SEMI

    TOKEN_INT     shift, and go to state 15
    TOKEN_CHAR    shift, and go to state 16
    TOKEN_BOOL    shift, and go to state 17
    TOKEN_IDENT   shift, and go to state 18
    TOKEN_NOT     shift, and go to state 19
    TOKEN_LPAREN  shift, and go to state 20

    logical_expr  go to state 21
    rel_expr      go to state 22
    expr          go to state 23
    term          go to state 24
    factor        go to state 25


state 7

    4 statement: TOKEN_LIB .

    $default  reduce using rule 4 (statement)


state 8

    0 $accept: prog . $end

    $end  shift, and go to state 26


state 9

    1 prog: statement .

    $default  reduce using rule 1 (prog)


state 10

    2 statement: assignment .

    $default  reduce using rule 2 (statement)


state 11

    3 statement: decl .

    $default  reduce using rule 3 (statement)


state 12

    5 statement: TOKEN_TYPE TOKEN_IDENT . TOKEN_LPAREN TOKEN_RPAREN
    6          | TOKEN_TYPE TOKEN_IDENT . TOKEN_LPAREN TOKEN_RPAREN TOKEN_LCURLY
    7          | TOKEN_TYPE TOKEN_IDENT . TOKEN_LPAREN TOKEN_RPAREN TOKEN_LCURLY TOKEN_RCURLY
   16 decl: TOKEN_TYPE TOKEN_IDENT . TOKEN_ASSIGN logical_expr TOKEN_SEMI
   17     | TOKEN_TYPE TOKEN_IDENT . TOKEN_SEMI

    TOKEN_ASSIGN  shift, and go to state 27
    TOKEN_SEMI    shift, and go to state 28
    TOKEN_LPAREN  shift, and go to state 29


state 13

   14 statement: TOKEN_IFELSE TOKEN_LPAREN . logical_expr TOKEN_RPAREN TOKEN_LCURLY

    TOKEN_INT     shift, and go to state 30
    TOKEN_CHAR    shift, and go to state 16
    TOKEN_BOOL    shift, and go to state 31
    TOKEN_IDENT   shift, and go to state 32
    TOKEN_NOT     shift, and go to state 19
    TOKEN_LPAREN  shift, and go to state 20

    logical_expr  go to state 33
    rel_expr      go to state 22
    expr          go to state 23
    term          go to state 24
    factor        go to state 25


state 14

   15 assignment: TOKEN_IDENT TOKEN_ASSIGN . logical_expr TOKEN_SEMI

    TOKEN_INT     shift, and go to state 30
    TOKEN_CHAR    shift, and go to state 16
    TOKEN_BOOL    shift, and go to state 31
    TOKEN_IDENT   shift, and go to state 32
    TOKEN_NOT     shift, and go to state 19
    TOKEN_LPAREN  shift, and go to state 20

    logical_expr  go to state 34
    rel_expr      go to state 22
    expr          go to state 23
    term          go to state 24
    factor        go to state 25


state 15

   11 statement: TOKEN_RETURN TOKEN_INT . TOKEN_SEMI
   36 factor: TOKEN_INT .

    TOKEN_SEMI  shift, and go to state 35

    TOKEN_SEMI  [reduce using rule 36 (factor)]
    $default    reduce using rule 36 (factor)


state 16

   37 factor: TOKEN_CHAR .

    $default  reduce using rule 37 (factor)


state 17

   12 statement: TOKEN_RETURN TOKEN_BOOL . TOKEN_SEMI
   39 factor: TOKEN_BOOL .

    TOKEN_SEMI  shift, and go to state 36

    TOKEN_SEMI  [reduce using rule 39 (factor)]
    $default    reduce using rule 39 (factor)


state 18

   10 statement: TOKEN_RETURN TOKEN_IDENT . TOKEN_SEMI
   38 factor: TOKEN_IDENT .

    TOKEN_SEMI  shift, and go to state 37

    TOKEN_SEMI  [reduce using rule 38 (factor)]
    $default    reduce using rule 38 (factor)


state 19

   20 logical_expr: TOKEN_NOT . logical_expr

    TOKEN_INT     shift, and go to state 30
    TOKEN_CHAR    shift, and go to state 16
    TOKEN_BOOL    shift, and go to state 31
    TOKEN_IDENT   shift, and go to state 32
    TOKEN_NOT     shift, and go to state 19
    TOKEN_LPAREN  shift, and go to state 20

    logical_expr  go to state 38
    rel_expr      go to state 22
    expr          go to state 23
    term          go to state 24
    factor        go to state 25


state 20

   28 rel_expr: TOKEN_LPAREN . expr TOKEN_RPAREN

    TOKEN_INT    shift, and go to state 30
    TOKEN_CHAR   shift, and go to state 16
    TOKEN_BOOL   shift, and go to state 31
    TOKEN_IDENT  shift, and go to state 32

    expr    go to state 39
    term    go to state 24
    factor  go to state 25


state 21

   13 statement: TOKEN_RETURN logical_expr . TOKEN_SEMI
   18 logical_expr: logical_expr . TOKEN_AND logical_expr
   19             | logical_expr . TOKEN_OR logical_expr

    TOKEN_SEMI  shift, and go to state 40
    TOKEN_AND   shift, and go to state 41
    TOKEN_OR    shift, and go to state 42


state 22

   21 logical_expr: rel_expr .

    $default  reduce using rule 21 (logical_expr)


state 23

   22 rel_expr: expr . TOKEN_LT expr
   23         | expr . TOKEN_GT expr
   24         | expr . TOKEN_LTE expr
   25         | expr . TOKEN_GTE expr
   26         | expr . TOKEN_EQEQ expr
   27         | expr . TOKEN_NEQ expr
   29         | expr .
   30 expr: expr . TOKEN_PLUS term
   31     | expr . TOKEN_MINUS term

    TOKEN_PLUS   shift, and go to state 43
    TOKEN_MINUS  shift, and go to state 44
    TOKEN_EQEQ   shift, and go to state 45
    TOKEN_NEQ    shift, and go to state 46
    TOKEN_LTE    shift, and go to state 47
    TOKEN_GTE    shift, and go to state 48
    TOKEN_LT     shift, and go to state 49
    TOKEN_GT     shift, and go to state 50

    $default  reduce using rule 29 (rel_expr)


state 24

   32 expr: term .
   33 term: term . TOKEN_MUL factor
   34     | term . TOKEN_DIV factor

    TOKEN_MUL  shift, and go to state 51
    TOKEN_DIV  shift, and go to state 52

    $default  reduce using rule 32 (expr)


state 25

   35 term: factor .

    $default  reduce using rule 35 (term)


state 26

    0 $accept: prog $end .

    $default  accept


state 27

   16 decl: TOKEN_TYPE TOKEN_IDENT TOKEN_ASSIGN . logical_expr TOKEN_SEMI

    TOKEN_INT     shift, and go to state 30
    TOKEN_CHAR    shift, and go to state 16
    TOKEN_BOOL    shift, and go to state 31
    TOKEN_IDENT   shift, and go to state 32
    TOKEN_NOT     shift, and go to state 19
    TOKEN_LPAREN  shift, and go to state 20

    logical_expr  go to state 53
    rel_expr      go to state 22
    expr          go to state 23
    term          go to state 24
    factor        go to state 25


state 28

   17 decl: TOKEN_TYPE TOKEN_IDENT TOKEN_SEMI .

    $default  reduce using rule 17 (decl)


state 29

    5 statement: TOKEN_TYPE TOKEN_IDENT TOKEN_LPAREN . TOKEN_RPAREN
    6          | TOKEN_TYPE TOKEN_IDENT TOKEN_LPAREN . TOKEN_RPAREN TOKEN_LCURLY
    7          | TOKEN_TYPE TOKEN_IDENT TOKEN_LPAREN . TOKEN_RPAREN TOKEN_LCURLY TOKEN_RCURLY

    TOKEN_RPAREN  shift, and go to state 54


state 30

   36 factor: TOKEN_INT .

    $default  reduce using rule 36 (factor)


state 31

   39 factor: TOKEN_BOOL .

    $default  reduce using rule 39 (factor)


state 32

   38 factor: TOKEN_IDENT .

    $default  reduce using rule 38 (factor)


state 33

   14 statement: TOKEN_IFELSE TOKEN_LPAREN logical_expr . TOKEN_RPAREN TOKEN_LCURLY
   18 logical_expr: logical_expr . TOKEN_AND logical_expr
   19             | logical_expr . TOKEN_OR logical_expr

    TOKEN_AND     shift, and go to state 41
    TOKEN_OR      shift, and go to state 42
    TOKEN_RPAREN  shift, and go to state 55


state 34

   15 assignment: TOKEN_IDENT TOKEN_ASSIGN logical_expr . TOKEN_SEMI
   18 logical_expr: logical_expr . TOKEN_AND logical_expr
   19             | logical_expr . TOKEN_OR logical_expr

    TOKEN_SEMI  shift, and go to state 56
    TOKEN_AND   shift, and go to state 41
    TOKEN_OR    shift, and go to state 42


state 35

   11 statement: TOKEN_RETURN TOKEN_INT TOKEN_SEMI .

    $default  reduce using rule 11 (statement)


state 36

   12 statement: TOKEN_RETURN TOKEN_BOOL TOKEN_SEMI .

    $default  reduce using rule 12 (statement)


state 37

   10 statement: TOKEN_RETURN TOKEN_IDENT TOKEN_SEMI .

    $default  reduce using rule 10 (statement)


state 38

   18 logical_expr: logical_expr . TOKEN_AND logical_expr
   19             | logical_expr . TOKEN_OR logical_expr
   20             | TOKEN_NOT logical_expr .

    $default  reduce using rule 20 (logical_expr)


state 39

   28 rel_expr: TOKEN_LPAREN expr . TOKEN_RPAREN
   30 expr: expr . TOKEN_PLUS term
   31     | expr . TOKEN_MINUS term

    TOKEN_PLUS    shift, and go to state 43
    TOKEN_MINUS   shift, and go to state 44
    TOKEN_RPAREN  shift, and go to state 57


state 40

   13 statement: TOKEN_RETURN logical_expr TOKEN_SEMI .

    $default  reduce using rule 13 (statement)


state 41

   18 logical_expr: logical_expr TOKEN_AND . logical_expr

    TOKEN_INT     shift, and go to state 30
    TOKEN_CHAR    shift, and go to state 16
    TOKEN_BOOL    shift, and go to state 31
    TOKEN_IDENT   shift, and go to state 32
    TOKEN_NOT     shift, and go to state 19
    TOKEN_LPAREN  shift, and go to state 20

    logical_expr  go to state 58
    rel_expr      go to state 22
    expr          go to state 23
    term          go to state 24
    factor        go to state 25


state 42

   19 logical_expr: logical_expr TOKEN_OR . logical_expr

    TOKEN_INT     shift, and go to state 30
    TOKEN_CHAR    shift, and go to state 16
    TOKEN_BOOL    shift, and go to state 31
    TOKEN_IDENT   shift, and go to state 32
    TOKEN_NOT     shift, and go to state 19
    TOKEN_LPAREN  shift, and go to state 20

    logical_expr  go to state 59
    rel_expr      go to state 22
    expr          go to state 23
    term          go to state 24
    factor        go to state 25


state 43

   30 expr: expr TOKEN_PLUS . term

    TOKEN_INT    shift, and go to state 30
    TOKEN_CHAR   shift, and go to state 16
    TOKEN_BOOL   shift, and go to state 31
    TOKEN_IDENT  shift, and go to state 32

    term    go to state 60
    factor  go to state 25


state 44

   31 expr: expr TOKEN_MINUS . term

    TOKEN_INT    shift, and go to state 30
    TOKEN_CHAR   shift, and go to state 16
    TOKEN_BOOL   shift, and go to state 31
    TOKEN_IDENT  shift, and go to state 32

    term    go to state 61
    factor  go to state 25


state 45

   26 rel_expr: expr TOKEN_EQEQ . expr

    TOKEN_INT    shift, and go to state 30
    TOKEN_CHAR   shift, and go to state 16
    TOKEN_BOOL   shift, and go to state 31
    TOKEN_IDENT  shift, and go to state 32

    expr    go to state 62
    term    go to state 24
    factor  go to state 25


state 46

   27 rel_expr: expr TOKEN_NEQ . expr

    TOKEN_INT    shift, and go to state 30
    TOKEN_CHAR   shift, and go to state 16
    TOKEN_BOOL   shift, and go to state 31
    TOKEN_IDENT  shift, and go to state 32

    expr    go to state 63
    term    go to state 24
    factor  go to state 25


state 47

   24 rel_expr: expr TOKEN_LTE . expr

    TOKEN_INT    shift, and go to state 30
    TOKEN_CHAR   shift, and go to state 16
    TOKEN_BOOL   shift, and go to state 31
    TOKEN_IDENT  shift, and go to state 32

    expr    go to state 64
    term    go to state 24
    factor  go to state 25


state 48

   25 rel_expr: expr TOKEN_GTE . expr

    TOKEN_INT    shift, and go to state 30
    TOKEN_CHAR   shift, and go to state 16
    TOKEN_BOOL   shift, and go to state 31
    TOKEN_IDENT  shift, and go to state 32

    expr    go to state 65
    term    go to state 24
    factor  go to state 25


state 49

   22 rel_expr: expr TOKEN_LT . expr

    TOKEN_INT    shift, and go to state 30
    TOKEN_CHAR   shift, and go to state 16
    TOKEN_BOOL   shift, and go to state 31
    TOKEN_IDENT  shift, and go to state 32

    expr    go to state 66
    term    go to state 24
    factor  go to state 25


state 50

   23 rel_expr: expr TOKEN_GT . expr

    TOKEN_INT    shift, and go to state 30
    TOKEN_CHAR   shift, and go to state 16
    TOKEN_BOOL   shift, and go to state 31
    TOKEN_IDENT  shift, and go to state 32

    expr    go to state 67
    term    go to state 24
    factor  go to state 25


state 51

   33 term: term TOKEN_MUL . factor

    TOKEN_INT    shift, and go to state 30
    TOKEN_CHAR   shift, and go to state 16
    TOKEN_BOOL   shift, and go to state 31
    TOKEN_IDENT  shift, and go to state 32

    factor  go to state 68


state 52

   34 term: term TOKEN_DIV . factor

    TOKEN_INT    shift, and go to state 30
    TOKEN_CHAR   shift, and go to state 16
    TOKEN_BOOL   shift, and go to state 31
    TOKEN_IDENT  shift, and go to state 32

    factor  go to state 69


state 53

   16 decl: TOKEN_TYPE TOKEN_IDENT TOKEN_ASSIGN logical_expr . TOKEN_SEMI
   18 logical_expr: logical_expr . TOKEN_AND logical_expr
   19             | logical_expr . TOKEN_OR logical_expr

    TOKEN_SEMI  shift, and go to state 70
    TOKEN_AND   shift, and go to state 41
    TOKEN_OR    shift, and go to state 42


state 54

    5 statement: TOKEN_TYPE TOKEN_IDENT TOKEN_LPAREN TOKEN_RPAREN .
    6          | TOKEN_TYPE TOKEN_IDENT TOKEN_LPAREN TOKEN_RPAREN . TOKEN_LCURLY
    7          | TOKEN_TYPE TOKEN_IDENT TOKEN_LPAREN TOKEN_RPAREN . TOKEN_LCURLY TOKEN_RCURLY

    TOKEN_LCURLY  shift, and go to state 71

    $default  reduce using rule 5 (statement)


state 55

   14 statement: TOKEN_IFELSE TOKEN_LPAREN logical_expr TOKEN_RPAREN . TOKEN_LCURLY

    TOKEN_LCURLY  shift, and go to state 72


state 56

   15 assignment: TOKEN_IDENT TOKEN_ASSIGN logical_expr TOKEN_SEMI .

    $default  reduce using rule 15 (assignment)


state 57

   28 rel_expr: TOKEN_LPAREN expr TOKEN_RPAREN .

    $default  reduce using rule 28 (rel_expr)


state 58

   18 logical_expr: logical_expr . TOKEN_AND logical_expr
   18             | logical_expr TOKEN_AND logical_expr .
   19             | logical_expr . TOKEN_OR logical_expr

    $default  reduce using rule 18 (logical_expr)


state 59

   18 logical_expr: logical_expr . TOKEN_AND logical_expr
   19             | logical_expr . TOKEN_OR logical_expr
   19             | logical_expr TOKEN_OR logical_expr .

    TOKEN_AND  shift, and go to state 41

    $default  reduce using rule 19 (logical_expr)


state 60

   30 expr: expr TOKEN_PLUS term .
   33 term: term . TOKEN_MUL factor
   34     | term . TOKEN_DIV factor

    TOKEN_MUL  shift, and go to state 51
    TOKEN_DIV  shift, and go to state 52

    $default  reduce using rule 30 (expr)


state 61

   31 expr: expr TOKEN_MINUS term .
   33 term: term . TOKEN_MUL factor
   34     | term . TOKEN_DIV factor

    TOKEN_MUL  shift, and go to state 51
    TOKEN_DIV  shift, and go to state 52

    $default  reduce using rule 31 (expr)


state 62

   26 rel_expr: expr TOKEN_EQEQ expr .
   30 expr: expr . TOKEN_PLUS term
   31     | expr . TOKEN_MINUS term

    TOKEN_PLUS   shift, and go to state 43
    TOKEN_MINUS  shift, and go to state 44

    $default  reduce using rule 26 (rel_expr)


state 63

   27 rel_expr: expr TOKEN_NEQ expr .
   30 expr: expr . TOKEN_PLUS term
   31     | expr . TOKEN_MINUS term

    TOKEN_PLUS   shift, and go to state 43
    TOKEN_MINUS  shift, and go to state 44

    $default  reduce using rule 27 (rel_expr)


state 64

   24 rel_expr: expr TOKEN_LTE expr .
   30 expr: expr . TOKEN_PLUS term
   31     | expr . TOKEN_MINUS term

    TOKEN_PLUS   shift, and go to state 43
    TOKEN_MINUS  shift, and go to state 44

    $default  reduce using rule 24 (rel_expr)


state 65

   25 rel_expr: expr TOKEN_GTE expr .
   30 expr: expr . TOKEN_PLUS term
   31     | expr . TOKEN_MINUS term

    TOKEN_PLUS   shift, and go to state 43
    TOKEN_MINUS  shift, and go to state 44

    $default  reduce using rule 25 (rel_expr)


state 66

   22 rel_expr: expr TOKEN_LT expr .
   30 expr: expr . TOKEN_PLUS term
   31     | expr . TOKEN_MINUS term

    TOKEN_PLUS   shift, and go to state 43
    TOKEN_MINUS  shift, and go to state 44

    $default  reduce using rule 22 (rel_expr)


state 67

   23 rel_expr: expr TOKEN_GT expr .
   30 expr: expr . TOKEN_PLUS term
   31     | expr . TOKEN_MINUS term

    TOKEN_PLUS   shift, and go to state 43
    TOKEN_MINUS  shift, and go to state 44

    $default  reduce using rule 23 (rel_expr)


state 68

   33 term: term TOKEN_MUL factor .

    $default  reduce using rule 33 (term)


state 69

   34 term: term TOKEN_DIV factor .

    $default  reduce using rule 34 (term)


state 70

   16 decl: TOKEN_TYPE TOKEN_IDENT TOKEN_ASSIGN logical_expr TOKEN_SEMI .

    $default  reduce using rule 16 (decl)


state 71

    6 statement: TOKEN_TYPE TOKEN_IDENT TOKEN_LPAREN TOKEN_RPAREN TOKEN_LCURLY .
    7          | TOKEN_TYPE TOKEN_IDENT TOKEN_LPAREN TOKEN_RPAREN TOKEN_LCURLY . TOKEN_RCURLY

    TOKEN_RCURLY  shift, and go to state 73

    $default  reduce using rule 6 (statement)


state 72

   14 statement: TOKEN_IFELSE TOKEN_LPAREN logical_expr TOKEN_RPAREN TOKEN_LCURLY .

    $default  reduce using rule 14 (statement)


state 73

    7 statement: TOKEN_TYPE TOKEN_IDENT TOKEN_LPAREN TOKEN_RPAREN TOKEN_LCURLY TOKEN_RCURLY .

    $default  reduce using rule 7 (statement)
